--- a/package.json
+++ b/package.json
@@ -1,60 +1,63 @@
 {
-    "name": "angular4-express4-cucumber",
-    "version": "1.0.0",
+    "name": "angular-express-cucumber",
+    "version": "2.0.0",
     "author": "Andrew Cunliffe <andrew@sysen.co.uk>",
     "license": "MIT",
     "scripts": {
         "start": "node dist/server/main.js",
         "build": "npm run lint && npm run build:client && npm run build:server",
-        "build:client": "ng build --env=prod --output-path=dist/client",
+        "build:client": "ng build --prod --output-path=dist/client",
         "build:server": "tsc -p ./server",
         "develop": "npm run build:server && concurrently -k -s first \"npm run watch:server\" \"npm run watch:client\"",
         "lint": "tslint --force --project client/tsconfig.json && tslint --force --project server/tsconfig.json",
-        "test": "npm run build && npm run test:server && concurrently -k -s first \"npm start\" \"npm run test:client\"",
+        "test": "npm run test:server && concurrently -k -s first \"npm start\" \"npm run test:client\"",
         "test:client": "protractor ./client/test/protractor.conf.js",
-        "test:server": "./node_modules/.bin/istanbul cover ./node_modules/.bin/cucumber-js -- ./server/test/features --require ./server/test",
+        "test:server": "./node_modules/.bin/istanbul cover ./node_modules/.bin/cucumber-js -- ./server/test/features --require ./server/test --exit",
         "watch:client": "ng build -w --output-path=dist/client",
         "watch:server": "concurrently -k -s first \"tsc -w -p ./server\" \"nodemon dist/server/main.js\"",
-        "postinstall": "./node_modules/.bin/webdriver-manager update --versions.chrome 2.31 --versions.standalone 3.4.0"
+        "postinstall": "./node_modules/.bin/webdriver-manager update --versions.chrome 2.43 --versions.standalone 3.14.0"
     },
     "dependencies": {
-        "@angular/animations": "4.3.4",
-        "@angular/cdk": "2.0.0-beta.8",
-        "@angular/common": "4.3.4",
-        "@angular/compiler": "4.3.4",
-        "@angular/core": "4.3.4",
-        "@angular/flex-layout": "2.0.0-beta.8",
-        "@angular/forms": "4.3.4",
-        "@angular/http": "4.3.4",
-        "@angular/material": "2.0.0-beta.8",
-        "@angular/platform-browser": "4.3.4",
-        "@angular/platform-browser-dynamic": "4.3.4",
-        "@angular/router": "4.3.4",
-        "core-js": "2.5.0",
-        "express": "4.15.4",
-        "hammerjs": "^2.0.8",
-        "rxjs": "5.4.3",
-        "zone.js": "0.8.16"
+        "@angular/animations": "7.0.1",
+        "@angular/cdk": "7.0.1",
+        "@angular/common": "7.0.1",
+        "@angular/compiler": "7.0.1",
+        "@angular/core": "7.0.1",
+        "@angular/flex-layout": "7.0.0-beta.19",
+        "@angular/forms": "7.0.1",
+        "@angular/http": "7.0.1",
+        "@angular/material": "7.0.1",
+        "@angular/platform-browser": "7.0.1",
+        "@angular/platform-browser-dynamic": "7.0.1",
+        "@angular/router": "7.0.1",
+        "classlist.js": "1.1.20150312",
+        "core-js": "2.5.7",
+        "express": "4.16.4",
+        "hammerjs": "2.0.8",
+        "rxjs": "6.3.3",
+        "web-animations-js": "2.3.1",
+        "zone.js": "0.8.26"
     },
     "devDependencies": {
-        "@angular/cli": "1.3.0",
-        "@angular/compiler-cli": "4.3.4",
-        "@angular/language-service": "4.3.4",
-        "@types/express": "4.0.36",
-        "@types/node": "8.0.22",
-        "chai": "4.1.1",
-        "codelyzer": "3.1.2",
-        "concurrently": "3.5.0",
-        "cucumber": "2.3.1",
-        "istanbul": "^0.4.5",
-        "nock": "^9.0.14",
-        "nodemon": "1.11.0",
-        "protractor": "5.1.2",
-        "protractor-cucumber-framework": "3.1.2",
-        "shelljs": "0.7.8",
-        "supertest": "^3.0.0",
-        "ts-node": "3.3.0",
-        "tslint": "5.6.0",
-        "typescript": "2.4.2"
+        "@angular-devkit/build-angular": "0.10.3",
+        "@angular/cli": "7.0.3",
+        "@angular/compiler-cli": "7.0.1",
+        "@angular/language-service": "7.0.1",
+        "@types/express": "4.16.0",
+        "@types/node": "10.12.0",
+        "chai": "4.2.0",
+        "codelyzer": "4.5.0",
+        "concurrently": "4.0.1",
+        "cucumber": "5.0.2",
+        "istanbul": "0.4.5",
+        "nock": "10.0.1",
+        "nodemon": "1.18.4",
+        "protractor": "5.4.1",
+        "protractor-cucumber-framework": "6.1.1",
+        "shelljs": "0.8.2",
+        "supertest": "3.3.0",
+        "ts-node": "7.0.1",
+        "tslint": "5.11.0",
+        "typescript": "3.1.3"
     }
 }
