--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,16 +2,18 @@
     "compileOnSave": false,
     "compilerOptions": {
         "baseUrl": "src",
-        "declaration": false,
-        "target": "es6",
-        "lib": [
-            "es2016",
-            "dom"
-        ],
         "sourceMap": true,
+        "declaration": false,
         "moduleResolution": "node",
+        "emitDecoratorMetadata": true,
+        "experimentalDecorators": true,
+        "target": "es6",
         "typeRoots": [
             "node_modules/@types"
+        ],
+        "lib": [
+            "es2017",
+            "dom"
         ]
     },
     "exclude": [
